--- a/css/style.css
+++ b/css/style.css
@@ -142,13 +142,15 @@ nav div:hover {
   bottom: 10%;
   right: 32%;
   padding: 1rem 3rem;
-  border-radius: 3px;
+  border-radius: 5px;
   font-size: 1.6rem;
   transition: opacity 0.2s;
 }
 
 .images button:hover {
-  opacity: 0.7;
+  background-color: var(--color-secondary);
+  opacity: 0.8;
+  color: #fff;
   cursor: pointer;
 }
 
@@ -158,11 +160,14 @@ nav div:hover {
   height: 45rem;
   background-color: var(--color-secondary);
   margin: 0 auto 2.5rem auto;
+
+  display: flex;
+  align-items: center;
 }
 
-.principal p {
+.principal img {
   width: 60rem;
-  height: 45rem;
+  height: 100%;
   background-color: var(--color-primary);
   margin: 0 auto;
 }
@@ -172,10 +177,11 @@ footer {
   width: 100rem;
   height: 7rem;
   background-color: var(--color-primary);
-  margin: 0 auto 2rem auto;
+  margin: 0 auto 0.2rem auto;
 
   display: flex;
   align-items: center;
+  justify-content: space-evenly;
 }
 
 footer * {
